@@ -67,4 +67,40 @@ addMessageCallback('MsgWeaponUsed', WeaponSelectedMessageCallback);
 
 //------------------------------------------------------------------------------
 
+function WarningMessageCallback(%msgType, %msgString, %a1, %a2, %a3, %a4, %a5, %a6, %a7, %a8, %a9, %a10)
+{
+	%slot = %a1;
+	%string = %a2;
+	%visible = %a3;
 
+	switch(%slot)
+	{
+		case 1:
+			if(%string !$= "") HudWarning1.setText(%string);
+			if(%visible !$= "") HudWarning1.setVisible(%visible);
+
+		case 2:
+			if(%string !$= "") HudWarning2.setText(%string);
+			if(%visible !$= "") HudWarning2.setVisible(%visible);
+
+		case 3:
+			if(%string !$= "") HudWarning3.setText(%string);
+			if(%visible !$= "") HudWarning3.setVisible(%visible);
+
+		case 4:
+			if(%string !$= "") HudWarning4.setText(%string);
+			if(%visible !$= "") HudWarning4.setVisible(%visible);
+
+		case 5:
+			if(%string !$= "") HudWarning5.setText(%string);
+			if(%visible !$= "") HudWarning5.setVisible(%visible);
+
+		case 6:
+			if(%string !$= "") HudWarning6.setText(%string);
+			if(%visible !$= "") HudWarning6.setVisible(%visible);
+	}
+}
+
+addMessageCallback('MsgWarning', WarningMessageCallback);
+
+//------------------------------------------------------------------------------
