@@ -9,7 +9,7 @@
 //-----------------------------------------------------------------------------
 
 $GameNameString = "rotc-ethernet";
-$GameVersionString = "p.1.11+dev4";
+$GameVersionString = "p.1.11+dev5";
 
 //------------------------------------------------------------------------------
 
